force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <label>Risk Record</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>