force-app/main/default/objects/Risk__c/fields/At_Risk_Since__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Since__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>At Risk Since</label>
    <required>true</required>
    <type>Date</type>
</CustomField>