force-app/main/default/objects/Risk__c/fields/Reason_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Reason_At_Risk__c</fullName>
    <label>Reason at Risk</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Network/Schedule</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Reciprocal Business</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>