force-app/main/default/objects/Risk__c/fields/Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>