force-app/main/default/objects/Risk__c/fields/Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Risk_Indicator__c</fullName>
    <formula>CASE(TEXT(Risk_Level__c), &apos;Almost Certain&apos;, IMAGE(&quot;resource/Risk_Detail/Risk_High.jpg&quot;, &quot;High&quot;, 25,25) , &apos;Possible&apos;, IMAGE(&quot;resource/Risk_Detail/Risk_Low.jpg&quot;, &quot;Medium&quot;, 25,25), &apos;Likely&apos;, IMAGE(&quot;resource/Risk_Detail/Risk_Medium.jpg&quot;, &quot;Low&quot;, 25,25),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Indicator</label>
    <type>Text</type>
</CustomField>