force-app/main/default/objects/Risk__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <inlineHelpText>Almost Certain: Expected to occur, inevitable. More than 95% probability. 
Likely: Will occur in most circumstances, not surprised if it happens. 51-95% probability. 
Possible: Might occur in some circumstances. 11-50% probability</inlineHelpText>
    <label>Likelihood of Loss</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Almost Certain</fullName>
            </value>
            <value>
                <fullName>Possible</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>